2015-08-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_binding): Check value of shortcut->toggle
	only if it actually is a toggle.  Found with valgrind.

2015-08-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (initialize_buffer): Initialize also openfile->syntax.
	This addresses Debian bug #787914 reported by Paul Wise.

2015-08-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (precalc_multicolorinfo): Set each multiline-color
	value instead of OR-ing it.  This fixes Savannah bug #45640.
	* src/help.c (help_init): Show also the dedicated keys in the
	^G help text.  This helps to clarify some keys, and helps to
	see which ones could easily be rebound.
	* src/nano.c (usage): Add "and exit" to the description of --help,
	to match --version, and to distinguish it more from ^G.

2015-07-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_cutword, do_cut_prev_word, do_cut_next_word),
	src/global.c (shortcut_init, strtosc), doc/texinfo/nano.texi,
	doc/man/nanorc.5: Add two new bindable functions, 'cutwordleft'
	and 'cutwordright', which delete all characters from the cursor
	to the preceding or succeeding word start.  Fixes bug #32803.

2015-07-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Don't show ^R and ^T in the help
	lines in restricted mode (if possible), to give visual feedback.
	* src/*.c: Normalize the whitespace after the preceding changes.
	* src/nano.c (show_restricted_warning, say_there_is_no_help):
	Differentiate between something being disabled/restricted (because
	of the way of invocation) and help texts being unavailable (which
	is a compile-time decision).
	* src/global.c (shortcut_init): Change "Justify" to a tag and regroup.
	* src/nano.c (do_suspend_void, do_suspend): Provide feedback when
	suspension is not enabled; and it cannot be enabled in restricted
	mode any longer, so there is no need to check for that any more.
